2014-09-18  Jan Hubicka  <hubicka@ucw.cz>

	PR lto/63298
	* ipa-devirt.c (odr_subtypes_equivalent_p): Fix thinko in a condition.

2014-09-18  Joseph Myers  <joseph@codesourcery.com>

	* system.h (LIBGCC2_TF_CEXT): Poison.
	* config/i386/cygming.h (LIBGCC2_TF_CEXT): Remove.
	* config/i386/darwin.h (LIBGCC2_TF_CEXT): Likewise.
	* config/i386/dragonfly.h (LIBGCC2_TF_CEXT): Likewise.
	* config/i386/freebsd.h (LIBGCC2_TF_CEXT): Likewise.
	* config/i386/gnu-user-common.h (LIBGCC2_TF_CEXT): Likewise.
	* config/i386/openbsdelf.h (LIBGCC2_TF_CEXT): Likewise.
	* config/i386/sol2.h (LIBGCC2_TF_CEXT): Likewise.
	* config/ia64/ia64.h (LIBGCC2_TF_CEXT): Likewise.
	* config/ia64/linux.h (LIBGCC2_TF_CEXT): Likewise.

2014-09-19  Kito Cheng  <kito@0xlab.org>

	* except.h: Fix header guard.
	* addresses.h: Add missing header guard.
	* cfghooks.h: Likewise.
	* collect-utils.h: Likewise.
	* collect2-aix.h: Likewise.
	* conditions.h: Likewise.
	* cselib.h: Likewise.
	* dwarf2asm.h: Likewise.
	* graphds.h: Likewise.
	* graphite-scop-detection.h: Likewise.
	* gsyms.h: Likewise.
	* hw-doloop.h: Likewise.
	* incpath.h: Likewise.
	* ipa-inline.h: Likewise.
	* ipa-ref.h: Likewise.
	* ira-int.h: Likewise.
	* ira.h: Likewise.
	* lra-int.h: Likewise.
	* lra.h: Likewise.
	* lto-section-names.h: Likewise.
	* read-md.h: Likewise.
	* reload.h: Likewise.
	* rtl-error.h: Likewise.
	* sdbout.h: Likewise.
	* targhooks.h: Likewise.
	* tree-affine.h: Likewise.
	* xcoff.h: Likewise.
	* xcoffout.h: Likewise.

2014-09-18  Vladimir Makarov  <vmakarov@redhat.com>

	PR debug/63285
	* haifa-sched.c (schedule_block): Advance cycle at the end of BB
	if advance != 0.

2014-09-18  Vladimir Makarov  <vmakarov@redhat.com>

	PR target/61360
	* lra.c (lra): Call recog_init.

2014-09-18  Jakub Jelinek  <jakub@redhat.com>

	PR c++/62017
	* asan.c (transform_statements): Don't instrument clobber statements.

2014-09-18  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>
