@@ -1,3 +1,8 @@
+2014-09-19  Nick Clifton  <nickc@redhat.com>
+
+	* config/rl78/rl78.c (rl78_expand_epilogue): Generate a USE of the
+	pop'ed registers so that DCE does not eliminate them.
+
 2014-09-18  Jan Hubicka  <hubicka@ucw.cz>
 
 	PR lto/63298
